<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/spinner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/search_institution" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:minHeight="@dimen/spinner_height" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/amountPicker_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/search_radius" />

            <NumberPicker
                android:visibility="invisible"
                android:id="@+id/amountPicker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_picker_height"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/search_text" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>